# tei-msdesc-authorities

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tei_msdesc_authorities/: __init__.py
src/tei_msdesc_authorities/authorities/: __init__.py  checker.py  cli.py  core.py  dimev.py  models.py  policy.py  records.py  renderer.py  services.py  wikidata.py
tests/: conftest.py  test_authorities_cli.py  test_authorities_insertion.py  test_authorities_mapping.py  test_authorities_workflows.py
